<resources>
    <string name="app_name">산책갈까?</string>
    <string name="main_desc">댕댕이를 위한 맞춤 날씨앱</string>

    <!--    Common-->
    <string name="dialog_quit">종료</string>
    <string name="dialog_confirm">확인</string>
    <string name="dialog_cancel">취소</string>

    <string name="boy">남아</string>
    <string name="girl">여아</string>

    <string name="dog_large">대형견</string>
    <string name="dog_medium">중형견</string>
    <string name="dog_small">소형견</string>

    <!--    Dialogs-->
    <string name="dialog_network_title">네트워크 연결 오류</string>
    <string name="dialog_network_body">네트워크에 연결되어있지 않습니다.\n연결 상태를 확인하고 다시 시도해주세요.</string>
    <string name="dialog_error_title">에러 발생</string>
    <string name="dialog_error_body">에러가 발생했습니다. 다시 시도해주세요.</string>

    <string name="dialog_error_weather_body">날씨 정보를 불러 올 수 없습니다.\n연결 상태를 확인하고 다시 시도해주세요.</string>
    <string name="dialog_error_address_body">주소 정보를 불러 올 수 없습니다.\n연결 상태를 확인하고 다시 시도해주세요.</string>

    <string name="dialog_caution_title">유의사항 안내</string>
    <string name="dialog_caution_sub_title">고지사항</string>
    <string name="dialog_caution_body">산책갈까? 에서 제공하는 산책 점수는 정확하지 않을 수 있기에, 참고만 해주시기 바라요!\n산책갈까?는 제공한 정보로 인해 발생한 손해에 대하여 어떠한 책임도 지지 않습니다.\n\n날씨 및 미세먼지 정보 제공 : \nhttps://www.weatherapi.com </string>

    <string name="dialog_permission_denied_title">권한 없음</string>
    <string name="dialog_permission_denied_body">위치 권한 제공에 대한 승인이 필요합니다.\n 앱을 종료합니다.</string>

    <string name="dialog_location_service_title">위치 기반 서비스 활성화</string>
    <string name="dialog_location_service_body">산책갈까? 에서는 위치 정보를 활용하기 때문에\n위치 서비스를 꼭 활성화 해주세요!</string>
    <string name="dialog_location_service_cancel">거부</string>
    <string name="dialog_location_service_confirm">설정</string>

    <string name="dialog_location_error_title">위치 정보 오류</string>
    <string name="dialog_location_error_body">위치 정보를 불러 올 수 없습니다.\n앱을 종료합니다.</string>

    <string name="dialog_app_quit_title">앱 종료</string>
    <string name="dialog_app_quit_body">앱을 종료할까요?</string>

    <string name="dialog_quit_registry_title">등록 취소</string>
    <string name="dialog_quit_registry_body">강아지 등록을 취소할까요?</string>
    <!--    RegisterActivity-->
    <string name="activity_register_title">산책할 댕댕이를\n소개해 주세요</string>
    <string name="activity_register_name">이름은 무엇인가요?</string>
    <string name="activity_register_type_name">이름을 입력해주세요.</string>
    <string name="activity_register_age">나이는 몇 살인가요?</string>
    <string name="activity_register_type_age">나이를 입력해주세요.</string>
    <string name="activity_register_fur_type">어떤 모종인가요?</string>
    <string name="activity_register_choose_fur_type">댕댕이의 모종을 알려주세요.</string>
    <string name="activity_register_size">댕댕이의 구분을 선택해주세요.</string>
    <string name="activity_register_btn_back">이전으로</string>
    <string name="activity_register_btn_register">등록완료</string>
    <string name="activity_register_choice_fur_type">모종 선택</string>
    <string name="activity_register_choice_fur_type_help">모종 선택 관련 도움말 안내</string>
    <string name="activity_register_long_fur">장모종 - 더블코트</string>
    <string name="activity_register_silky_fur">견모종 - 실키코트</string>
    <string name="activity_register_short_fur">단모종</string>
    <string name="activity_register_strong_fur">강모종</string>
    <string name="activity_register_curly_fur">권모종</string>

    <string name="activity_register_long_fur_example">장모종-더블코트 : 골든 리트리버, 콜리, 포메라니안</string>
    <string name="activity_register_silky_fur_example">견모종-실키코트 : 요크셔테리어, 몰티즈, 코카스파니엘</string>
    <string name="activity_register_short_fur_example">단모종 : 달마시안, 비글, 불 테리어, 래브라도 리트리버, 시바견</string>
    <string name="activity_register_strong_fur_example">강모종 : 미니어처 슈나우저, 스코티시 테리어 등 테리어종</string>
    <string name="activity_register_curly_fur_example">권모종 : 푸들, 비숑 프리제 등</string>
    <string name="activity_register_size_help">구분 기준</string>
    <string name="activity_register_size_help_desc">7Kg 이하는 소형견, 7Kg 초과~15Kg 이하 중형견, 15Kg 초과는 대형견으로 구분</string>

    <!--    MainFragment-->
    <string name="fragment_main_highest">최고</string>
    <string name="fragment_main_lowest">최저</string>
    <string name="fragment_main_humidity">습도</string>
    <string name="fragment_main_ultra_fine_dust">초미세먼지</string>
    <string name="fragment_main_fine_dust">미세먼지</string>
    <string name="fragment_main_rainy">강수</string>
    <string name="fragment_main_degree">˚</string>
    <string name="fragment_main_percent">%</string>
    <string name="fragment_main_dust_unit">㎍/㎥</string>

    <string name="fragment_main_dust_level1">매우 나쁨</string>
    <string name="fragment_main_dust_level2">나쁨</string>
    <string name="fragment_main_dust_level3">보통</string>
    <string name="fragment_main_dust_level4">좋음</string>
    <string name="fragment_main_dust_level5">매우 좋음</string>

    <string name="fragment_main_reason">점수는 이렇게 계산됐어요!</string>
    <string name="fragment_main_no_reason">감점 요인이 없어요.</string>

    <string name="fragment_main_need_permission_title">권한 요청 거부됨</string>
    <string name="fragment_main_need_permission_body">앱을 종료합니다.</string>

    <!--    MainItem-->
    <string name="item_main_title">오늘의 날씨 점수는요?</string>

    <string name="item_main_point_desc_1">신나게 야외활동 해주세요!</string>
    <string name="item_main_point_desc_2">적당한 날씨네요. 산책하기 괜찮겠어요!</string>
    <string name="item_main_point_desc_3">나가도 괜찮지만, 주의해주세요.</string>
    <string name="item_main_point_desc_4">오늘은 집에 있는게 좋겠어요.</string>
    <string name="item_main_point_desc_5">나가면 안 돼요. 실내에 머물러주세요.</string>

    <!--    DogListActivity-->
    <string name="activity_dog_list_title">댕댕이의 가족을\n추가해 주세요</string>
    <string name="activity_remove_dialog_title">강아지 삭제</string>
    <string name="activity_remove_dialog_body">저장된 강아지를 삭제할까요?</string>
    <string name="activity_go_home_screen">홈으로</string>

    <!--    AddDogItem-->
    <string name="item_add_dog_text">가족 추가하기</string>
    <string name="title_activity_register2">RegisterActivity2</string>
</resources>