<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="dialog"
            type="com.jangjh123.shallwegoforawalk.ui.component.CautionDialog" />
    </data>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/box_radius4_color_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans_medium"
                android:letterSpacing="-0.06"
                android:text="@string/dialog_caution_title"
                android:textColor="@color/black"
                android:textSize="19dp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:onClick="@{dialog::quit}"
                android:src="@drawable/icon_close" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/noto_sans_medium"
            android:letterSpacing="-0.06"
            android:text="@string/dialog_caution_sub_title"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/textview_caution_body"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:text="@string/dialog_caution_body"
            android:textColor="@color/gray_depth2"
            android:textSize="15dp" />

    </LinearLayout>
</layout>